--- a/consumer/Dockerfile
+++ b/consumer/Dockerfile
@@ -3,4 +3,4 @@ WORKDIR /app
 COPY requirements.txt requirements.txt
 RUN pip3 install -r requirements.txt
 COPY . .
-CMD [ "python", "./client.py" ]
+CMD [ "python", "./consumer.py" ]
